tests/valid_seq/module_c.m
%---------------------------------------------------------------------------%
% vim: ts=4 sw=4 et ft=mercury
%---------------------------------------------------------------------------%

:- module module_c.
:- interface.

:- use_module module_d.
:- type module_c.foo == module_d.foo.

