tests/invalid_nodepend/invalid_pragma.m
%---------------------------------------------------------------------------%
% vim: ts=4 sw=4 et ft=mercury
%---------------------------------------------------------------------------%
%
% Test error message for misformed pragam declaration.
%
%---------------------------------------------------------------------------%

:- module invalid_pragma.
:- interface.

:- type foo == int.
:- pragma 1235.
